--- a/frontend/views/notifications.html
+++ b/frontend/views/notifications.html
@@ -5,6 +5,7 @@
     <title>PeakLand</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta charset="UTF-8">
+    <meta http-equiv="refresh" content="30">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/body.css" type="text/css"/>
 </head>
@@ -29,7 +30,7 @@
                                 <div class="row justify-content-center" style="height:50px;width:500px;padding-bottom: 1%; padding-top:1%">
                                     <div class="d-flex justify-content-start align-items-center" style="height:50px;width:600px;">
                                         <div class="ml-auto w-100 p-2 bd-highlight" style="height:50px;width:600px;">
-                                            <div class="bold-text flex-item-text text" id="pathNameCardView" align="left">{{$val.Visit.Username}} has invited you to a visit</div>
+                                            <div class="bold-text flex-item-text text" id="pathNameCardView" align="left">{{$val.Username}} has invited you to a visit</div>
                                         </div>
                                     </div>
                                 </div>
