--- a/frontend/views/viewPathInfo.html
+++ b/frontend/views/viewPathInfo.html
@@ -22,7 +22,6 @@
                     class="btn justify-content-start align-items-center"
                     style="display: flex; justify-content: flex-start;"><img src="../static/img/back.png" width="35%">
             </button>
-
             <div class="container">
                 <div class="row mx-auto" style="padding-top: 6%;">
                     <div class="col-xs-1 center-block" align="center">
@@ -46,11 +45,7 @@
 
                 <div class="d-flex justify-content-center align-items-center" style="padding-top: 15%;">
                     <div class="p-2 flex-item-photos">
-                        {{/* <% if (!base64.isEmpty()) { %>*/}}
-                        {{/* <img src="data:image/png;base64,<%=base64.get(0)%>" class="img-responsive photo">*/}}
-                        {{/* <% } else { %>*/}}
                         <img src="../static/img/mountain_path.png" class="img-responsive photo">
-                        {{/* <% } %>*/}}
                     </div>
                 </div>
             </div>
@@ -75,32 +70,12 @@
                                 <p class="green-text">Altitude&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Altitude}}</span>
                                 </p>
                             </div>
-                            {{/*
-                            <div class="row">
-                                <p class="green-text">Lenght&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLenghtAsText()%></span>
-                                </p>
-                            </div>
-                            */}}
                             <div class="row">
                                 <p class="green-text">Level&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Level}}</span>
                                 </p>
                             </div>
-                            {{/*
-                            <div class="row">*/}}
-                                {{/* <p class="green-text">Landscape&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getLandscapeAsText()%></span>
-                                </p>*/}}
-                                {{/*
-                            </div>
-                            */}}
-                            {{/*
-                            <div class="row">*/}}
-                                {{/* <p class="green-text">Ground&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text"><%=path.getGroundAsText()%></span>
-                                </p>*/}}
-                                {{/*
-                            </div>
-                            */}}
                             <div class="row">
-                                <p class="green-text">Cycleable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Cyclable}}</span>
+                                <p class="green-text">Cyclable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Cyclable}}</span>
                                 </p>
                             </div>
                             <div class="row">
@@ -111,22 +86,11 @@
                                 <p class="green-text">Family suitable&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">{{.path.Family}}</span>
                                 </p>
                             </div>
-                            {{/*
-                            <div class="row">*/}}
-                                {{/* <p class="green-text">Travel Time&nbsp;&nbsp;&nbsp;&nbsp;<span class="black-text">*/}}
-{{/*										<%=path.getHoursAsText()%> : <%=path.getMinutesAsText()%>*/}}
-{{/*									</span></p>*/}}
-                                {{/*
-                            </div>
-                            */}}
                         </div>
                         <br>
                     </div>
-
                     <div class="col-sm">
-
                         <br>
-
                         <div class="container">
                             <form class="form" method="post">
                                 <div class="d-flex justify-content-between align-items-center">
@@ -143,7 +107,6 @@
                                     <div class="p-2 flex-item-link">
                                         <button type="submit" class="btn" name="viewForecast" value="viewForecast"><img
                                                 src="../static/img/apple-weather.png" class="img-responsive"></button>
-
                                     </div>
                                     <div class="p-2" style="max-width: 30%; max-height: 30%;">
                                         <button type="submit" class="btn" name="viewReviews" value="viewReviews"><img
@@ -167,103 +130,14 @@
                                 </div>
                             </form>
                         </div>
-
-                        <br><br>
-
-                        <div class="d-flex justify-content-start align-items-center">
-                            <div class="p-2 flex-item-icon">
-                                <img src="../static/img/camera.png" class="img-responsive icons">
-                            </div>
-                            <div class="p-2 flex-item-text pull-left text">Photos</div>
-                        </div>
-
-                        {{/*
-                        <form class="form-inline" action="viewMountainPathInfo.jsp" method="post">*/}}
-                            {{/*
-                            <div class="d-flex justify-content-between align-items-center">*/}}
-                                {{/*
-                                <div class="p-2 flex-item-arrow">*/}}
-                                    {{/* <input type="image" name="prev" value="prev" src="Images/right-arrow.png"
-                                                class="img-responsive rotate-180" ${ sessionScope.disablePrev eq true ?
-                                    'style="display: none;"' : ''}>*/}}
-                                    {{/*
-                                </div>
-                                */}}
-                                {{/*
-                                <div class="p-2 flex-item-photos w-50 h-50">*/}}
-                                    {{/* <% if (!base64.isEmpty()) { %>*/}}
-                                    {{/* <img src="data:image/png;base64,<%=base64.get((int)session.getAttribute("
-                                              currImgNum"))%>" class="img-responsive photo">*/}}
-                                    {{/* <% } else { %>*/}}
-                                    {{/* <img src="Images/mountain_path.png" class="img-responsive photo">*/}}
-                                    {{/* <% } %>*/}}
-                                    {{/*
-                                </div>
-                                */}}
-                                {{/*
-                                <div class="p-2 flex-item-arrow">*/}}
-                                    {{/* <input type="image" name="next" value="next" src="Images/right-arrow.png"
-                                                class="img-responsive" ${ sessionScope.disableNext eq true ?
-                                    'style="display: none;"' : ''}>*/}}
-                                    {{/*
-                                </div>
-                                */}}
-                                {{/*
-                            </div>
-                            */}}
-                            {{/*
-                        </form>
-                        */}}
-
-                        <br><br>
-
-                        {{/*
-                        <div class="d-flex justify-content-start align-items-center">
-                            <div class="p-2 flex-item-icon">
-                                <img src="Images/filled-like.png" class="img-responsive icons">
-                            </div>
-                            <div class="p-2 flex-item-text pull-left text">Vote</div>
-
-                            <% if (path.getVote() != 0) {
-                            for(int i = 0; i < path.getVote(); i++) {
-                            %>
-                            <div class="p-2 flex-item-stars">
-                                <img src="Images/star.png" class="img-responsive icons">
-                            </div>
-                            <%
-                            }
-                            }
-                            else {
-                            %>
-                            <div class="p-2 black-text"><%=path.getVoteAsText()%></div>
-                            <%
-                            }
-                            %>
-
-                        </div>
-                        */}}
-
-                        {{/*
-                        <div class="container" style="padding-left: 5%;">
-                            <div class="row">
-                                <p class="green-text">Number of votes&nbsp;
-                                    <span class="black-text"><%=path.getNumberOfVotesAsText()%></span>
-                                </p>
-                            </div>
-                        </div>
                     </div>
-                    */}}
-
                 </div>
-
-
             </div>
         </div>
-
     </div>
 </div>
     <!-- Bootstrap Bundle with Popper -->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
 
 </body>
 </html>
